<resources>

    <string name="app_name">Visitor Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Android Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">GCM: device successfully registered!</string>
    <string name="gcm_unregistered">GCM: device successfully unregistered!</string>
    <string name="gcm_message">GCM: you got message!</string>
    <string name="gcm_error">GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">Demo Server: successfully added device!</string>
    <string name="server_unregistered">Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="name_hint">Full Name</string>
    <string name="RegisterBT">register</string>
    <string name="email_hint">email</string>
    <string name="image_hint">Image</string>
    <string name = "number_hint">Your Number</string>
    <string name="create_meeting_text">Create Meeting</string>
    <string name="meeting_location">Location</string>
    <string name="meeting_host">Meeting Host</string>
    <string name="meeting_host_hint">Enter Host Name</string>
    <string name="meeting_time">Meeting Time</string>
    <string name="meeting_time_hint">Select Meeting Time</string>
    <string name="meeting_date">Meeting Date</string>
    <string name="meeting_date_hint">Select Meeting Date</string>
     <string name="meeting_invite">Invitee</string>
    <string name="meeting_invite_hint">Enter Invitiee Number</string>
    <string name="action_search">Search</string>
    <string name="action_location">Location</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check Updates</string>
    <string name="meeting_subject">Subject</string>

</resources>