<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        
					    <TextView
					        android:id="@+id/textView1"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					      
					        android:text="@string/meeting_location" />
					
					    <EditText
					        android:id="@+id/meetingLocationET"
					        android:layout_width="match_parent"
					        android:layout_height="wrap_content"
					        android:hint="@string/meeting_location"
					        >
					
					        <requestFocus />
					    </EditText>
    </LinearLayout>
    
  
    
    
    
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        
					    <TextView
					        android:id="@+id/textView5"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					      
					        android:text="@string/meeting_invite" />
					
					     <EditText
				        android:id="@+id/MeetingInviteET"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:hint="@string/meeting_invite_hint" >
				
				    </EditText>

    </LinearLayout>
    
    
    
    
    
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        
				    <TextView
				        android:id="@+id/textView2"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				
				        android:text="@string/meeting_host" />
				
				    <EditText
				        android:id="@+id/MeetingHostET"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:hint="@string/meeting_host_hint" >
				
				        <requestFocus />
				    </EditText>
    </LinearLayout>
    
       
    
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        
					    <TextView
					        android:id="@+id/textView3"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					      
					        android:text="@string/meeting_date" />
					
					    <Button
					        android:id="@+id/datePickerBT"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:text="@string/meeting_date_hint"
					         />

    </LinearLayout>
    
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        
					    <TextView
					        android:id="@+id/textView4"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					      
					        android:text="@string/meeting_time" />
					
					    <Button
					        android:id="@+id/timePickerBT"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:text="@string/meeting_time_hint"
					         />

   
      </LinearLayout>
      
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/meetingCreated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.62"
                android:text="Done"
                android:gravity="bottom" />
        </LinearLayout>

</LinearLayout>
