<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical" >
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        
					    <TextView
					        android:id="@+id/subject"
					        android:layout_weight="1"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					      
					        android:text="@string/meeting_subject" />
					
					    <EditText
					        android:id="@+id/subjectEt"
					        android:layout_weight="1"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:hint="@string/meeting_subject"
					        >
					
					        <requestFocus />
					    </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        
					    <TextView
					        android:id="@+id/welcome"
					        android:layout_weight="1"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					      
					        android:text="@string/meeting_location" />
					
					    <EditText
					        android:id="@+id/meetingLocationET"
					        android:layout_weight="1"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:hint="@string/meeting_location"
					        >
					
					        <requestFocus />
					    </EditText>
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        
					    <TextView
					        android:id="@+id/textView3"
					        android:layout_weight=".5"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					      
					        android:text="@string/meeting_date" />
					
					    <Button
					        android:id="@+id/datePickerBT"
					        android:layout_weight=".5"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:text="@string/meeting_date_hint"
					         />

    </LinearLayout>
    
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        
					    <TextView
					        android:id="@+id/textView4"
					        android:layout_weight=".5"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					      
					        android:text="@string/meeting_time" />
					
					    <Button
					        android:id="@+id/timePickerBT"
					        android:layout_weight=".5"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:text="@string/meeting_time_hint"
					         />

   
      </LinearLayout>
    
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        
					    <TextView
					        android:id="@+id/meetingInvitee"
					        android:layout_weight=".5"
					        android:layout_width="fill_parent"
					        android:layout_height="wrap_content"
					      
					        android:text="@string/meeting_invite" />
					    <!-- <Button  
    					   android:layout_weight=".4"
    					   android:layout_width="wrap_content"
    						android:layout_height="wrap_content"  
    				    android:id="@+id/contact_picker"  
      				  android:text="Select Hosts"  
       					 android:onClick="doLaunchContactPicker"></Button>  -->
					
					     <EditText
				        android:id="@+id/MeetingInviteET"
				        android:layout_weight=".5"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:hint="@string/meeting_invite_hint" >
				
				    </EditText>

    </LinearLayout>
    
    
    
    
    
     
    
       
    
     
    
    
      
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/meetingCreated"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:gravity="bottom|center_horizontal"
                android:text="Create Meeting" />

        </LinearLayout>

</LinearLayout>
