<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical" >
     
   <!--  <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/image_hint"
        android:src="@drawable/gcm_logo" /> -->
   
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
         android:layout_marginTop="20dip"
         android:text="@string/number_hint"
         android:textColor="@color/Red" />
     
     <EditText android:id="@+id/txtNum" 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textColor="#000000"
        
         android:hint="@string/number_hint"/> 
         
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
         android:layout_marginTop="20dip"
         android:text="@string/name_hint"
         android:textColor="@color/Red" />
     
     <EditText android:id="@+id/txtName" 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textColor="#000000"
        
         android:hint="@string/name_hint"/>
     
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
         android:text="@string/email_hint"
         android:textColor="@color/Red" />
     
     <EditText
         android:id="@+id/txtEmail"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="@string/email_hint"
         android:inputType="textEmailAddress"
         android:textColor="#000000" />
     
     <Button android:id="@+id/btnRegister" 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/RegisterBT"
         android:layout_margin="10dip"/>

</LinearLayout>